--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 { 
-    "token"  : "NDUyOTUxNzM0MzY1NTg1NDI5.DfX0Jw.87ov7FxhZWYuGEXN00Mh1aW6k_0",
+    "token"  : "NDUyOTUxNzM0MzY1NTg1NDI5.XU9DqQ.gHwkYrR2hEt0GPFy-waPe-MEnT4",
     "prefix" : "/"
   }
